--- a/resume.css
+++ b/resume.css
@@ -7,6 +7,12 @@ body {
     /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
 }
 
+main {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 img {
     height: 100px;
     width: 100px;
@@ -16,10 +22,13 @@ img {
 ul {
     list-style: none;
 }
+
 a {
     color: rgb(97, 243, 35)
 }
-@media screen and(max-width: 768px){
+
+@media screen and(max-width: 768px) {
     body {
-        background: linear-gradient(0.25turn, #f69d3c, #ebf8e1, #3f87a6);}
+        background: linear-gradient(0.25turn, #f69d3c, #ebf8e1, #3f87a6);
+    }
 }
