--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 .header {
     grid-area: header;
+    margin-left: auto;
+    margin-right: auto;
     background-image: url("/Assets/special_pokeballs_by_toripng_ddmanxw-fullview.png");
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     color: rgb(242, 229, 89);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 60vh;
+    background-repeat: repeat;
+    background-size: contain;
+    /* height: 150vh; */
+    /* width: 50vw */
 }
 
 a {
